Fixed header z-index and footer layout

--- a/site/source/scss/styles.scss
+++ b/site/source/scss/styles.scss
@@ -37,7 +37,7 @@ p {
   align-items: center;
   padding-left: 200px;
   padding-right: 20px;
-  z-index: 2;
+  z-index: 3;
 
   .main-nav {
     display: flex;
@@ -65,9 +65,9 @@ p {
   position: relative;
   margin: 0 auto;
   margin-top: 70px;
-  width: 1100px;
+  width: 1200px;
   height: 1200px;
-  background-color: burlywood;
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 50px;
@@ -129,7 +129,7 @@ p {
   height: 400px;
 
   &__item {
-    flex: 1;
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -137,6 +137,7 @@ p {
     &--right {
       position: relative;
       flex-direction: column;
+      padding: 20px;
 
       &::before {
         position: absolute;
